force-app/main/default/objects/FieloCH__ChallengeReward__c/FieloCH__ChallengeReward__c.object-meta.xml
<CustomObject>
    <customHelpPage>FieloCH__ChallengeRewardHelpBackend</customHelpPage>
    <label>Challenge Reward</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rewards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>