force-app/main/default/objects/FieloCH__ChallengeReward__c/fields/FieloCH__Badge__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Badge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Badge</label>
    <referenceTo>FieloEE__Badge__c</referenceTo>
    <relationshipLabel>Challenge Rewards</relationshipLabel>
    <relationshipName>ChallengeRewards</relationshipName>
    <type>Lookup</type>
</CustomField>