force-app/main/default/objects/FieloCH__ChallengeReward__c/fields/FieloCH__Challenge__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Challenge__c</fullName>
    <label>Challenge</label>
    <referenceTo>FieloCH__Challenge__c</referenceTo>
    <relationshipLabel>Rewards</relationshipLabel>
    <relationshipName>ChallengeRewards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>