force-app/main/default/objects/FieloCH__ChallengeReward__c/fields/FieloCH__From__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__From__c</fullName>
    <description>Range of position to win this reward</description>
    <label>From</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>