force-app/main/default/objects/FieloCH__ChallengeReward__c/fields/FieloCH__Limit__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Limit__c</fullName>
    <description>Limit of reward by member</description>
    <label>Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>