force-app/main/default/objects/FieloCH__ChallengeReward__c/fields/FieloCH__NumberValue__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__NumberValue__c</fullName>
    <label>Number Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>