force-app/main/default/objects/FieloCH__ChallengeReward__c/fields/FieloCH__Position__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Position__c</fullName>
    <label>Position</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>