force-app/main/default/objects/FieloCH__ChallengeReward__c/fields/FieloCH__Reward__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Reward__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Instant reward</description>
    <label>Reward</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Reward does not exist or it is not an instant reward</errorMessage>
        <filterItems>
            <field>FieloEE__Reward__c.FieloEE__isInstantReward__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FieloEE__Reward__c</referenceTo>
    <relationshipLabel>Challenge Rewards</relationshipLabel>
    <relationshipName>ChallengeRewards</relationshipName>
    <type>Lookup</type>
</CustomField>