force-app/main/default/objects/FieloCH__ChallengeReward__c/fields/FieloCH__To__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__To__c</fullName>
    <description>Range of position to win this reward</description>
    <label>To</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>