force-app/main/default/objects/FieloCH__ChallengeReward__c/fields/FieloCH__TransactionPoint__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__TransactionPoint__c</fullName>
    <description>Point value of the transaction</description>
    <label>Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>