force-app/main/default/objects/FieloCH__ChallengeReward__c/fields/FieloCH__TransactionType__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__TransactionType__c</fullName>
    <description>Type of the transaction</description>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adjust</fullName>
                <default>true</default>
                <label>Adjust</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>