force-app/main/default/objects/FieloCH__ChallengeReward__c/fields/FieloCH__Value__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Value__c</fullName>
    <description>Value to update the member field</description>
    <label>Value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>