force-app/main/default/objects/FieloCH__ChallengeReward__c/fields/FieloCH__WithCustomReward__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__WithCustomReward__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom reward</label>
    <type>Checkbox</type>
</CustomField>