force-app/main/default/objects/FieloCH__ChallengeReward__c/validationRules/FieloCH__Edit_Reward.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloCH__Edit_Reward</fullName>
    <active>true</active>
    <description>If the Challenge is active then the reward cannot be modified</description>
    <errorConditionFormula>FieloCH__Challenge__r.FieloCH__IsActive__c</errorConditionFormula>
    <errorMessage>Cannot modified the Reward if the Challenge is Active.</errorMessage>
</ValidationRule>